# ComfyUI-OrpheusTTS

./: OrpheusTTS_nodes.py  README.md  __init__.py  pyproject.toml  requirements.txt
Orpheus-TTS/: emotions.txt
